# fips-rng-tests

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: fips_rng_tests.h
src/: CMakeLists.txt  fips_rng_tests.c
tests/: CMakeLists.txt  main.c
